[project]
name = "personal-agent-chef-with-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.1",
    "tavily>=1.1.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.26",
]
